# ac209b-emotion-mbti-final-project

./: .gitignore  AGENTS.md  README.md
data/: README.md
docs/: agent_task_router.md  llm_project_context.md
docs/course/: README.md
milestones/: README.md
milestones/ms0_project_proposal/: README.md  original_project_proposal.md  requirements.md
milestones/ms1_group_formation/: README.md  requirements.md
milestones/ms2_data_wrangling_project_redefinition/: README.md  notebook_summary.md  requirements.md
milestones/ms3_eda_baseline_pipeline/: README.md  notebook_summary.md  requirements.md
milestones/ms4_final_modeling_deliverables/code/: README.md  cs1090b_ms4_main_group66.ipynb  pyproject.toml
milestones/ms4_final_modeling_deliverables/code/scripts/: aggregate_report_results.py  cache_emotion_features.py  cache_transformer_embeddings.py  preprocess_reddit_ms4.py  run_author_baselines.py  run_set_attention_author_models.py  run_smoke_checks.py  run_transformer_author_models.py  train_stage2_text_gru.py
milestones/ms4_final_modeling_deliverables/code/src/ms4mbti/: __init__.py  author_features.py  baselines.py  cache.py  cli.py  config.py  data.py  embeddings.py  emotion.py  evaluation.py  experiments.py  models.py  negative_controls.py  preprocessing.py  progress.py  quality.py  split.py  stage2.py  text.py  token_audit.py  training.py  transformer_author.py  viz.py  weighting.py
milestones/ms4_final_modeling_deliverables/code/tests/: test_aggregate_report_results.py  test_smoke.py  test_train_stage2_text_gru.py  test_transformer_author_design.py
(+53 files in other folders)
